src/test/deca/context/invalid/test_class/this_outside_class.deca
// Description:
//    Unit Test this used outside of a class
// Results:
//    error
//
// History:
//    Created on 20/01/2025


{
    int x = this.x;
}
